# SSX-ElfLdr

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  ElfLoader.cpp  ElfLoader.h  LICENSE  Makefile  README.md  codeutils.cpp  codeutils.h  main.cpp  mkdocs.yml  patch.cpp  patch.h  patch_hostfs.cpp  patch_memory.cpp  tools.mk
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: autobuild.yml
cmake/: CMakeNewPolicy.cmake  FindMkDocs.cmake  GitTag.cmake  MkDocs.cmake
cmake/Toolchain/: highlink.ld  ps2.cmake
cmake/Toolchain/Platform/: Playstation2.cmake
docs/: gamesupport.md  index.md  patchdescriptions.md  setupguide.md
docs/develop/: building.md  mlstd.md  utils.md
include/: BinaryMap.h  ElfLoader.h  ErlAbi.h  ErlApi.h  ErlLoader.h  GameApi.h  NonNull.h  String.h  codeutils.h  patch.h  structs.h  utils.h
include/elfldr/: ElfLoader.h  ErlAbi.h  GameApi.h  GameVersion.h
include/erl/: ErlLoader.h
include/mlstd/: Allocator.h  Array.h  Assert.h  Bit.h  CharTraits.h  DynamicArray.h  Error.h  Expected.h  Fnv1a.h  Hash.h  HashTable.h  Optional.h  ScopeExitGuard.h  String.h  TypeTraits.h  Unique.h  Utility.h
include/mlstd/detail/: DeferredHolder.h  Fnv1a.h
include/runtime/: Allocator.h  Array.h  Assert.h  CharTraits.h  DynamicArray.h  Expected.h  Fnv1a.h  Hash.h  HashTable.h  Optional.h  ScopeExitGuard.h  String.h  TypeTraits.h  Utility.h
include/runtime/detail/: DeferredHolder.h
include/sdk/: ErlAbi.h  GameApi.h  OGStructs.h  structs.h
include/utils/: Allocator.h  Array.h  CharTraits.h  CodeUtils.h  Expected.h  FioDirectory.h  FioFile.h  Fnv1a.h  GameVersion.h  Hash.h  HashTable.h  Hook.h  MipsIEncoder.h  ScopeExitGuard.h  String.h  TypeTraits.h  Utils.h  VersionProbe.h  codeutils.h  fnv.h  utils.h
ld/: linkfile
src/: BinaryMap.h  ElfLoader.cpp  ElfLoader.h  GameVersion.cpp  GameVersion.h  Makefile  binmap.h  codeutils.cpp  codeutils.h  debugout.cpp  license.h  main.cpp  patch.cpp  patch.h  patch_experimental.cpp  patch_hostfs.cpp  patch_hostfs_ssx3.cpp  patch_memory.cpp  structs.h  utils.cpp  utils.h
src/config/: ConfigGroup.h  ConfigTokens.h
src/elfldr/: BinaryMap.h  CMakeLists.txt  ElfLoader.cpp  ElfLoader.h  ElfPatch.cpp  GameVersion.cpp  GameVersion.h  Patch.cpp  Patch.h  VersionProbe.cpp  VersionProbe.h  main.cpp  patch.cpp  patch.h  patch_experimental.cpp  patch_hostfs.cpp  patch_memory.cpp
src/elfldr/Patches/: Experimental.cpp  HostFS.cpp  MemoryClear.cpp
src/erl/: CMakeLists.txt  ErlAllocator.cpp  ErlAllocator.h  ErlLoader.cpp  HashTable.h  Makefile  README.md  elf.h  ref_erl.c
src/mlstd/: Allocator.cpp  CMakeLists.txt  Error.cpp  Fnv1a.cpp  String.cpp
src/mlstd/crt/: printf.cpp  ps2sdk_stubs.cpp
src/runtime/: Allocator.cpp  CMakeLists.txt  Fnv1a.cpp  String.cpp
src/runtime/crt/: itoa.cpp  printf.cpp  ps2sdk_stubs.cpp  sprintf.cpp  string.cpp  vsprintf.cpp
src/runtime/crt/attic/: crt0.S  mem.cpp  string.cpp  strlen.cpp  strrev.cpp  vsprintf.cpp
src/sampleerl/: CMakeLists.txt  Makefile  sampleerl.cpp
src/utils/: Allocator.cpp  AllocatorSetup.cpp  CMakeLists.txt  CodeUtils.cpp  FioDirectory.cpp  FioFile.cpp  Fnv1a.cpp  GameApi.cpp  GameVersion.cpp  Hook.cpp  Makefile  VersionProbe.cpp  assert.cpp  codeutils.cpp  debugout.cpp  fnv.cpp
src/utils/elf/: Makefile
src/utils/erl/: Makefile
